--- a/Functions/Functions.csproj
+++ b/Functions/Functions.csproj
@@ -25,5 +25,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GraphDBBackup\" />
+    <Folder Include="JsonKeyToArrayConverter\" />
   </ItemGroup>
 </Project>
