--- a/Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation.csproj
+++ b/Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation.csproj
@@ -115,6 +115,8 @@
     <Content Include="GridInQuestArtefacts\TN15GB.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Deployment\ApplicationSettingsRetrieval.ps1" />
+    <Content Include="Deployment\AppService.json" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
