--- a/Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation.csproj
+++ b/Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation.csproj
@@ -115,8 +115,12 @@
     <Content Include="GridInQuestArtefacts\TN15GB.dat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Deployment\ApplicationSettingsRetrieval.ps1" />
-    <Content Include="Deployment\AppService.json" />
+    <Content Include="Deployment\ApplicationSettingsRetrieval.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Deployment\AppService.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
