--- a/Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation/Web.config
+++ b/Data.Orchestration.CoordinateTransformation/Parliament.Data.Orchestration.CoordinateTransformation/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="ApplicationInsightsInstrumentationKey" value="abc" />
+    <add key="ApplicationInsightsInstrumentationKey" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
