--- a/Functions/Functions.csproj
+++ b/Functions/Functions.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Parliament.Model" Version="1.1.0" />
+    <PackageReference Include="Parliament.Rdf.Serialization" Version="1.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
