--- a/Functions/Functions.csproj
+++ b/Functions/Functions.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.ServiceBus" Version="2.1.0-beta1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Parliament.Model" Version="1.1.1-r1658" />
+    <PackageReference Include="Parliament.Model" Version="1.1.1" />
     <PackageReference Include="Parliament.Rdf.Serialization" Version="1.1.2-r1646" />
   </ItemGroup>
   <ItemGroup>
