time part taken into account while extracting date only

--- a/Functions.Test/packages.config
+++ b/Functions.Test/packages.config
@@ -5,7 +5,7 @@
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net471" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
-  <package id="Parliament.Model" version="1.1.0" targetFramework="net471" />
-  <package id="Parliament.Rdf.Serialization" version="1.1.0" targetFramework="net471" />
+  <package id="Parliament.Model" version="1.1.2-r1854" targetFramework="net471" />
+  <package id="Parliament.Rdf.Serialization" version="1.1.2-r1864" targetFramework="net471" />
   <package id="VDS.Common" version="1.10.0" targetFramework="net471" />
 </packages>
