--- a/Functions.Test/Functions.Test.csproj
+++ b/Functions.Test/Functions.Test.csproj
@@ -55,10 +55,10 @@
       <HintPath>..\Functions\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Parliament.Model, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Functions\packages\Parliament.Model.1.1.0\lib\net461\Parliament.Model.dll</HintPath>
+      <HintPath>..\Functions\packages\Parliament.Model.1.1.2-r1854\lib\net461\Parliament.Model.dll</HintPath>
     </Reference>
     <Reference Include="Parliament.Rdf.Serialization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Functions\packages\Parliament.Rdf.Serialization.1.1.0\lib\net461\Parliament.Rdf.Serialization.dll</HintPath>
+      <HintPath>..\Functions\packages\Parliament.Rdf.Serialization.1.1.2-r1864\lib\net461\Parliament.Rdf.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -76,7 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Functions\Functions.csproj">
